Fix filterContainer clipping

--- a/src/components/header/Header.module.scss
+++ b/src/components/header/Header.module.scss
@@ -2,6 +2,10 @@
   top: 0;
   border-bottom: 1px solid rgba(255, 255, 255, 0.2);
   min-height: 70px;
+  z-index: 10000;
+  position: fixed;
+  width: 100%;
+  left: 0;
 
   .logo {
     padding: 10px 0;
